fix overflow

--- a/assets/css/navstyle.scss
+++ b/assets/css/navstyle.scss
@@ -38,7 +38,7 @@ $mob-pixels: {{ site.breakpoint }};
 .leaf {color: var(--leaf)}
 
 // These elements are for the wideheader only and so will be turned on with a media query
-.wideheader,#widehome,#StickyScrollBegin,#StickyScrollBeginPadding,/*#searchsubmit,*/#unfold  {
+.wideheader,#widehome,#search__spacer  {
    display: none;
 }
 
@@ -121,7 +121,6 @@ $mob-pixels: {{ site.breakpoint }};
 }
 
 .logo {
-  // z-index: 15;
   // Mobile bird logo
   &__mobile {
     // padding: 10px;
@@ -151,7 +150,7 @@ $mob-pixels: {{ site.breakpoint }};
 .navbar {
   color: var(--alert-text);
   background: var(--color-1-dark);
-  z-index: 5;
+  z-index: 1;
   position: absolute;
   font-weight: bold; 
   text-align: left;
@@ -202,33 +201,34 @@ $mob-pixels: {{ site.breakpoint }};
     background-color: var(--active);
   }
   // Search on narrow screens
-  #searchForm {
-    display: flex;
-    align-items: center;
-    position: relative;
-    padding: 0 8px 0 5px;
-  }
-  #searchInput {
-    //padding: 16px 10px;
-    flex: 1 1 100%;
-    height: 54px;
-    border: none;
-    text-indent: 0.6rem;
-    background: var(--body-bg);
-    color: var(--body-text);
-  }
-  #searchSubmit {
-    flex: 0 1 2.5rem;
-    height: 54px;
-    // width: 100%;
-    background: var(--color-1-light);
-    cursor: pointer;
-    // padding: 0;
-    &:hover {
-      background: var(--active);
+  #search {
+    &__form {
+      display: flex;
+      align-items: center;
+      position: relative;
+      padding: 0 8px 0 5px;
     }
-    i {
-      vertical-align: initial;
+    &__input {
+      //padding: 16px 10px;
+      flex: 1 1 100%;
+      height: 54px;
+      border: none;
+      text-indent: 0.6rem;
+      background: var(--body-bg);
+      color: var(--body-text);
+    }
+    &__submit {
+      flex: 0 1 2.5rem;
+      height: 54px;
+      background: var(--color-1-light);
+      cursor: pointer;
+      // padding: 0;
+      &:hover {
+        background: var(--active);
+      }
+      i {
+        vertical-align: initial;
+      }
     }
   }
   #languageChanger {
@@ -321,7 +321,7 @@ $mob-pixels: {{ site.breakpoint }};
 @media screen and (min-width: $mob-pixels) {
 
   // These elements are for the wideheader only and so will be turned on with a media query
-  .wideheader,#widehome {
+  .wideheader,#widehome,#search__spacer {
      display: block;
      opacity: 1;
   }
@@ -340,7 +340,7 @@ $mob-pixels: {{ site.breakpoint }};
     // overflow-y: hidden;
     animation: hide-scroll 1.2s backwards;
     @keyframes hide-scroll {
-      from, to { overflow: hidden; } 
+      from, to { overflow-x: hidden; } 
     }
     &__text {
       white-space: nowrap;
@@ -385,65 +385,59 @@ $mob-pixels: {{ site.breakpoint }};
     }
 
     // widescreen search
-    #searchInput {
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
+    #search {
+      display: flex;
       width: 100%;
-      // border-radius: 5px 0 0 5px;
-      opacity: 0;
-      cursor: pointer;
       height: 55px;
-      z-index: 2;
-      transition: left 450ms ease,
-                  width 450ms cubic-bezier(0.18, 0.89, 0.32, 1.28);
-    }
-    #searchSubmit {
-      transition: color .3s ease, background .3s ease;
-    }
-    .search-container {
-      position: relative;
-    }
-    #searchForm {
-      padding: initial;
-      --search-size: 51px;
+      // overflow-x: hidden;
+      &__spacer {
+        width: 100%;
+        flex: 1 1 auto;
+      }
+      &__input {
+        position: absolute;
+        // position: relative;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        opacity: 0;
+        cursor: pointer;
+        height: 55px;
+        z-index: 4;
+        transition: left 450ms ease,
+                    width 450ms cubic-bezier(0.18, 0.89, 0.32, 1.28);
+      }
+      &__submit {
+        transition: color .3s ease, background .3s ease;
+        height: 55px;
+        z-index: 3;
+      }
+      &__form {
+        padding: initial;
+      } // let's try this
+
       &:focus-within {
         outline: none;
-        // overflow-y: hidden;
-        //animation: hide-scroll 1.2s backwards;
-        //@keyframes hide-scroll {
-          //from, to { overflow: hidden; } 
-        //}
-        #searchInput {
-          z-index: 1;
+        #search__input {
+          z-index: 2;
           opacity: 1;
-          left: -210px;
-          width: calc(100% - var(--search-size));
-          width: 210px;
+          width: 240px;
           &:focus {
             outline: none;
           }
         }
       } 
       &:not(:focus-within) {
-        #searchInput {
-          transition: left 200ms ease, width 200ms ease, opacity 0ms linear .2s, z-index 0ms linear .2s;
+        #search__input {
+          transition: width 200ms ease, opacity 0ms linear .2s, z-index 0ms linear .2s;
         }
       }
-      &:hover #searchSubmit {
+      &:hover #search__submit {
         color: var(--anti-alert-text);
       }
     }
-    #searchSubmit {
-      height: 55px;
-      z-index: 1;
-    }
-    #search-container {
-      margin-left: auto;
-      height: 55px;
-    }
-
+      
     // Dropdown styling
     .dropdown > ul {
       display: block;
